kubernetes/haproxy-ingress-tls-passthrough.yaml
# Example for HAProxy Ingress: TLS is NOT terminated in Kubernetes.
# Replace <namespace> and adapt labels/names to your cluster.
apiVersion: v1
kind: Service
metadata:
  name: atlas-install-el10
  namespace: <namespace>
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: atlas-install-el10-1
  namespace: <namespace>
  labels:
    kubernetes.io/service-name: atlas-install-el10
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "192.168.1.144"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas-install-el10
  namespace: <namespace>
  annotations:
    haproxy-ingress.github.io/ssl-passthrough: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: atlas-install-el10.apps.desalvo.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-install-el10
                port:
                  number: 443
